# fwrog-e

./: .gitignore  README.md  package.json
backend/: .env.example  Pipfile  package-lock.json  package.json  requirements.txt
backend/src/: index.ts  langchain_agent.py  main.py  socket_manager.py  whispers_engine.py
frontend/: .env.example  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json
frontend/patches/: recordrtc@5.6.2.patch
frontend/src/: App.tsx  global.css  main.tsx
frontend/src/components/: Nav.tsx  RecordingButton.tsx
frontend/src/components/Modal/: Modal.tsx
frontend/src/integrations/whisper/: main.ts
frontend/src/lib/: WebMediaRecorderService.ts  assemblyAiService.ts  webSpeechRecognitionService.ts
frontend/src/logic/: AssemblyAiService.ts
frontend/src/logic/AssemblyAI/: AssemblyAiService.ts
frontend/src/logic/WebSpeech/: WebSpeech.types.ts  WebSpeechRecognitionService.ts
whisper-service/: .env.example  Pipfile  Procfile  pyproject.toml  requirements.txt
whisper-service/src/: main.py  whispers_engine.py  whispers_repository.py
