[tool.poetry]
name = "fwrog-e whisper service"
version = "0.1.0"
description = "This project starts up a FastAPI websocket server"
authors = ["Bence Gadanyi <hey@bence.codes>"]
license = "MIT"

[tool.poetry.dependencies]
python_version = "^3.10"
fastapi = "*"
python-dotenv = "*"
whisper = "*"
starlette = "*"
uvicorn = "*"
watchgod = "*"
websockets = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"