[tool.poetry]
name = "fwrog-e whisper service"
version = "0.1.0"
description = "This project starts up a FastAPI WebSocket server exposing OpenAI's Whisper"
authors = ["Bence Gadanyi <hey@bence.codes>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "*"
starlette = "*"
uvicorn = "*"
websockets = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"